--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <h1>This is a Header</h1>
     <p>This is a Paragraph</p>
     <p>This is second paragraph</p>
+    <p>This is the new paragraph</p>
 </body>
 </html>
